--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "next": "15.0.0",
